--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 DB_USERNAME=huy
 DB_PASSWORD=123
 ACCESS_TOKEN_SECRET=1d123dcs487fds98v6xc98g6r9sd
+MONGO_URL=mongodb+srv://huy:123@mern-learncourse.yo3cpqb.mongodb.net/?retryWrites=true&w=majority&appName=mern-learncourse
